objects/PSCommFooterTopic__c.object
<CustomObject>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSCommFooterConfig__c</fullName>
        <label>PSCommFooterConfig</label>
        <referenceTo>PSCommFooterConfig__c</referenceTo>
        <relationshipLabel>PSCommFooterTopic</relationshipLabel>
        <relationshipName>PSCommFooterTopic</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PSCommFooterTopic</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>PSCommFooterTopic ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSCommFooterTopic</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>